@@ -17,6 +17,7 @@
 
 package org.photonvision.vision.processes;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -25,8 +26,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.photonvision.common.configuration.CameraConfiguration;
@@ -189,8 +188,8 @@ public class VisionModuleManagerTest {
 
         sleep(1500);
 
-        Assertions.assertNotNull(module0DataConsumer.result);
-        printTestResults(module0DataConsumer.result);
+        assertNotNull(module0DataConsumer.result);
+        TestUtils.printTestResults(module0DataConsumer.result);
     }
 
     @Test
@@ -233,15 +232,12 @@ public class VisionModuleManagerTest {
         var modules =
                 List.of(testSource, testSource2, testSource3, usbSimulation, usbSimulation2).stream()
                         .map(vmm::addSource)
-                        .collect(Collectors.toList());
+                        .toList();
 
         System.out.println(
                 Arrays.toString(
                         modules.stream().map(it -> it.getCameraConfiguration().streamIndex).toArray()));
-        var idxs =
-                modules.stream()
-                        .map(it -> it.getCameraConfiguration().streamIndex)
-                        .collect(Collectors.toList());
+        var idxs = modules.stream().map(it -> it.getCameraConfiguration().streamIndex).toList();
 
         assertTrue(usbSimulation.equals(usbSimulation));
         assertTrue(!usbSimulation.equals(usbSimulation2));
@@ -251,13 +247,6 @@ public class VisionModuleManagerTest {
         assertTrue(idxs.contains(2));
         assertTrue(idxs.contains(3));
         assertTrue(idxs.contains(4));
-    }
-
-    private static void printTestResults(CVPipelineResult pipelineResult) {
-        double fps = 1000 / pipelineResult.getLatencyMillis();
-        System.out.print(
-                "Pipeline ran in " + pipelineResult.getLatencyMillis() + "ms (" + fps + " fps), ");
-        System.out.println("Found " + pipelineResult.targets.size() + " valid targets");
     }
 
     private void sleep(int millis) {
