@@ -41,7 +41,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.photonvision.PhotonCamera;
 import org.photonvision.estimation.TargetModel;
 
@@ -123,6 +122,7 @@ public class VisionSystemSim {
      * @return If the camera was present and removed
      */
     public boolean removeCamera(PhotonCameraSim cameraSim) {
+        @SuppressWarnings("resource")
         boolean success = camSimMap.remove(cameraSim.getCamera().getName()) != null;
         camTrfMap.remove(cameraSim);
         return success;
@@ -357,10 +357,7 @@ public class VisionSystemSim {
                 entry ->
                         dbgField
                                 .getObject(entry.getKey())
-                                .setPoses(
-                                        entry.getValue().stream()
-                                                .map(t -> t.getPose().toPose2d())
-                                                .collect(Collectors.toList())));
+                                .setPoses(entry.getValue().stream().map(t -> t.getPose().toPose2d()).toList()));
 
         if (robotPoseMeters == null) return;
 
